[package]
name = "wisteria"
version = "0.1.0"
edition = "2021"
description = "A simple game engine"
license = "MIT"
repository = "https://github.com/uysalerinc/wisteria-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*",
]

[features]
# TODO

[dependencies]
wisteria_core = { path = "crates/wisteria_core"}

[lints]
workspace = true

[[example]]
name= "sandbox"
path= "examples/sandbox.rs"
